# StockLens-AI

./: .gitignore  main.py  pyproject.toml
app/: dependencies.py  main.py
app/ai/: groq_client.py  prompt_builder.py
app/api/: annual_report_routes.py  company_routes.py  financial_routes.py  market_routes.py
app/builders/: candlestick_chart_builder.py  revenue_chart_builder.py
app/core/: config.py  logger.py
app/exceptions/: company_not_found.py
app/models/: __init__.py  balance_sheet.py  cash_flow.py  chart_data.py  company.py  company_statistics.py  financial_chart_data.py  financial_metric.py  income_statement.py  market_data.py  market_snapshot.py  news_article.py
app/rag/: answer_generation_service.py  chunker.py  document_indexing_service.py  embedding_service.py  parser.py  report_cache.py  retrieval_service.py  text_cleaner.py  vector_store.py
app/repositories/: company_repository.py  financial_repository.py  market_repository.py  news_repository.py
app/services/: ai_insight_service.py  annual_report_chat_service.py  company_search_service.py  financial_service.py  market_service.py  news_service.py
app/transformers/: balance_sheet_transformer.py  cash_flow_transformer.py  income_statement_transformer.py  market_transformer.py
frontend/: dependencies.py  main.py
frontend/components/: ai_company_summary.py  ai_financial_health.py  ai_investment_thesis.py  ai_news_summary.py  ai_risks.py  ai_strengths.py  balance_sheet_section.py  business_summary.py  cash_flow_section.py  (+9 more)
scripts/: inspect_company_info.py  news_test.py  preview_candlestick.py
(+47 files in other folders)
