[project]
name = "stocklens-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pydantic-settings>=2.14.2",
    "pymupdf4llm>=1.28.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.1",
    "uvicorn>=0.51.0",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
